@@ -27,7 +27,6 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <compilerArgs>
-                        <arg>--add-opens=java.base/java.lang.foreign=ALL-UNNAMED</arg>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
@@ -41,7 +40,7 @@
         <project.version>1.0</project.version>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <maven.compiler.version>3.10.1</maven.compiler.version>
+        <maven.compiler.version>3.12.1</maven.compiler.version>
         <junit.jupiter.version>5.9.0</junit.jupiter.version>
     </properties>
 
